<resources>
    <string name="app_out_name">Hello app</string>

    <string name="welcome_guide">Welcome to the quick \n operation guidance!</string>
    <string name="welcome_guide_detail">Let’s take a quick look at the basic \n operation of the information system.</string>

    <string name="btn_skip">Skip</string>
    <string name="btn_start">Start</string>

    <string name="text_page2_guide1">Click power button to mute.</string>
    <string name="text_page2_guide2">Long press power button 3s to standby and display clock.</string>
    <string name="text_page2_guide3">Long pres power button 10s to reboot system if necessary.</string>
    <string name="text_page2_title">Power button operation</string>

</resources>