<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_theme_1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="96dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="550dp"
                android:layout_height="100dp"
                android:text="@string/text_page2_guide1"
                android:textColor="@color/text_theme_1"
                android:textSize="31sp" />

            <TextView
                android:layout_width="550dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:text="@string/text_page2_guide2"
                android:textColor="@color/text_theme_1"
                android:textSize="31sp" />

            <TextView
                android:layout_width="550dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:text="@string/text_page2_guide3"
                android:textColor="@color/text_theme_1"
                android:textSize="31sp" />

        </LinearLayout>


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/welcome_img_2" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="25dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="50dp"
            android:text="@string/text_page2_title"
            android:textColor="@color/text_theme_1"
            android:textSize="38sp" />

    </RelativeLayout>


</LinearLayout>