<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_theme_1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="100dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="550dp"
                android:layout_height="150dp"
                android:text="@string/welcome_guide"
                android:textColor="@color/text_theme_1"
                android:textSize="54dp" />

            <TextView
                android:layout_width="550dp"
                android:layout_height="90dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="11dp"
                android:text="@string/welcome_guide_detail"
                android:textColor="@color/text_theme_2"
                android:textSize="31dp" />

        </LinearLayout>


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/page_1_img" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_skip"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="77dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/btn_skip"
            android:textAllCaps="false"
            android:textColor="@color/text_theme_1"
            android:textSize="@dimen/text_btn_size" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/btn_start"
            android:textAllCaps="false"
            android:textColor="@color/text_theme_1"
            android:textSize="@dimen/text_btn_size" />


    </LinearLayout>


</LinearLayout>